// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render 1`] = `
<div>
  <button
    class="OriginalButton__StyledButton-sc-o0fs2j-0 jVYfXJ"
    type="button"
  >
    <div
      class="flex relative items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button should render a large one 1`] = `
<div>
  <button
    class="OriginalButton__StyledButton-sc-o0fs2j-0 cMELZV"
    type="button"
  >
    <div
      class="flex relative items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button should render a small one 1`] = `
<div>
  <button
    class="OriginalButton__StyledButton-sc-o0fs2j-0 hfHQJK"
    type="button"
  >
    <div
      class="flex relative items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button should render an icon 1`] = `
<div>
  <button
    class="OriginalButton__StyledButton-sc-o0fs2j-0 cwTDtW"
    type="button"
  >
    <div
      class="flex relative items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button should render as danger button 1`] = `
<div>
  <button
    class="OriginalButton__StyledButton-sc-o0fs2j-0 hOLFJX"
    type="button"
  >
    <div
      class="flex relative items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button should render as primary button 1`] = `
<div>
  <button
    class="OriginalButton__StyledButton-sc-o0fs2j-0 jVYfXJ"
    type="button"
  >
    <div
      class="flex relative items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button should render as secondary button 1`] = `
<div>
  <button
    class="OriginalButton__StyledButton-sc-o0fs2j-0 jfKZOY"
    type="button"
  >
    <div
      class="flex relative items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button should render as transparent button 1`] = `
<div>
  <button
    class="OriginalButton__StyledButton-sc-o0fs2j-0 jONzci"
    type="button"
  >
    <div
      class="flex relative items-center space-x-2"
    />
  </button>
</div>
`;

exports[`Button should render if disabled 1`] = `
<DocumentFragment>
  <button
    class="OriginalButton__StyledButton-sc-o0fs2j-0 kvIYgy"
    data-testid="Button"
    disabled=""
    type="button"
  >
    <div
      class="flex relative items-center space-x-2"
    >
      Click
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render loading with icon 1`] = `
<div>
  <button
    class="OriginalButton__StyledButton-sc-o0fs2j-0 cwTDtW"
    type="button"
  >
    <div
      class="flex relative items-center space-x-2"
    >
      <div
        class="flex relative items-center"
      >
        <span
          class="flex invisible items-center space-x-2"
        >
          <div
            class="sc-bdnxRM AFVmm"
            height="16"
            width="16"
          />
        </span>
        <div
          class="absolute top-0 right-0 bottom-0 left-0"
        >
          <div
            class="Spinner-sc-1rpx65r-0 jrWVRB m-auto"
            color="info"
          />
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`Button should render with icon and custom icon size 1`] = `
<div>
  <button
    class="OriginalButton__StyledButton-sc-o0fs2j-0 jVYfXJ"
    type="button"
  >
    <div
      class="flex relative items-center space-x-2"
    >
      <div
        class="sc-bdnxRM NjstW"
        height="20"
        width="20"
      >
        <svg>
          plus.svg
        </svg>
      </div>
      Click Me
    </div>
  </button>
</div>
`;

exports[`Button should render with icon on the left side 1`] = `
<div>
  <button
    class="OriginalButton__StyledButton-sc-o0fs2j-0 jVYfXJ"
    type="button"
  >
    <div
      class="flex relative items-center space-x-2"
    >
      <div
        class="sc-bdnxRM AFVmm"
        height="16"
        width="16"
      >
        <svg>
          plus.svg
        </svg>
      </div>
      Click Me
    </div>
  </button>
</div>
`;

exports[`Button should render with icon on the right side 1`] = `
<div>
  <button
    class="OriginalButton__StyledButton-sc-o0fs2j-0 jVYfXJ"
    type="button"
  >
    <div
      class="flex relative items-center space-x-2"
    >
      Click Me
      <div
        class="sc-bdnxRM AFVmm"
        height="16"
        width="16"
      >
        <svg>
          plus.svg
        </svg>
      </div>
    </div>
  </button>
</div>
`;

exports[`Button should render with loading state enabled 1`] = `
<div>
  <button
    class="OriginalButton__StyledButton-sc-o0fs2j-0 jVYfXJ"
    type="button"
  >
    <div
      class="flex relative items-center space-x-2"
    >
      <div
        class="flex relative items-center"
      >
        <span
          class="flex invisible items-center space-x-2"
        >
          Click Me
        </span>
        <div
          class="absolute top-0 right-0 bottom-0 left-0"
        >
          <div
            class="Spinner-sc-1rpx65r-0 jrWVRB m-auto"
            color="info"
          />
        </div>
      </div>
    </div>
  </button>
</div>
`;
